fixed arrows position for phone screens and fixed contact form button not visible

--- a/src/sass/base/_globals.scss
+++ b/src/sass/base/_globals.scss
@@ -12,9 +12,11 @@
 html {scroll-behavior: smooth;}
 body {
   color: $font;
-  padding-top: 3.2rem;
   font-family: "Poppins", sans-serif;
   background: $base;
+  @media #{$sm}{
+    padding-top: 3.2rem;
+  }
 }
 ul {list-style: none;}
 a,
