--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+  padding-bottom: 7rem;
   .socials {
     font-size: 1.9rem;
     display: flex;
